fixing extra space at the bottom

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -40,7 +40,7 @@
     width: 100%;
     overflow: hidden;
     .content {
-      height: 70vh;
+      height: 100vh;
       width: 100%;
     }
   }
