--- a/styles/style.css
+++ b/styles/style.css
@@ -241,7 +241,6 @@ input:checked + .slider:before {
   .toggle {
     display: none;
   }
-  /* The switch - the box around the slider */
 }
 
 .card {
@@ -294,7 +293,7 @@ input:checked + .slider:before {
     overflow: hidden;
   }
   .card .content {
-    height: 70vh;
+    height: 100vh;
     width: 100%;
   }
 }
